--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Foundation</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
+    <link rel="stylesheet" type="text/css" href="scss/slides.css"/>  
   </head>
   <body>
         <nav class="top-bar" data-topbar role="navigation">
@@ -20,7 +21,11 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
             <ul class="right">
-                  <li class="active"><a href="#">Right Button Active</a></li>
+                  <li class="active"><a href="#">Reservations</a></li>
+                  <li class="active"><a href="#">Travel Guide</a></li>
+                  <li class="active"><a href="#">Rates</a></li>
+                  <li class="active"><a href="#">Check In/Out</a></li>
+
 <!--                   <li class="has-dropdown">
                     <a href="#">Right Button Dropdown</a>
                         <ul class="dropdown">
@@ -35,8 +40,44 @@
       </section>
     </nav>
 
+<div class="slides">
+  <div><img src="images/one.jpg" alt=""></div>
+  <div><img src="images/two.jpg" alt=""></div>
+  <div><img src="images/three.jpg" alt=""></div>
+  <div><img src="images/four.jpg" alt=""></div>
+  <div><img src="images/five.jpg" alt=""></div>
+  <div><img src="images/six.jpg" alt=""></div>
+  <div><img src="images/seven.jpg" alt=""></div>
+  <div><img src="images/eight.jpg" alt=""></div>
+  <div><img src="images/nine.jpg" alt=""></div>
+  <div><img src="images/ten.jpg" alt=""></div>
+  <div><img src="images/eleven.jpg" alt=""></div>
+  <div><img src="images/twelve.jpg" alt=""></div>
+  <div><img src="images/thirteen.jpg" alt=""></div>
+  <div><img src="images/forteen.jpg" alt=""></div>
+</div>
+
+<div>Map</div>
+
+
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.min.js"></script>
+  <script type="text/javascript">
+        $(document).ready(function(){
+          $('.slides').slick({
+            autoplay: true,
+            autoplaySpeed: 2000,
+            fade: true
+          });
+        });
+  </script>
+
+
+
   </body>
 </html>
