HTML CSS for CTA, Nav

--- a/index.html
+++ b/index.html
@@ -56,8 +56,33 @@
   <div><img src="images/thirteen.jpg" alt=""></div>
   <div><img src="images/forteen.jpg" alt=""></div>
 </div>
+<div class='wrapper row'>
+  <div class='availability small-12 medium-6 column'>
+      <button id="checkAvail">Check Availability</button>
+      <div id='calendar' class='hidden'>
+    <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" class='calendar'></iframe>
+    </div>
+  </div>
+  <div class='reservation small-12 medium-6 column'>
+    <a href='reservation.html'><button>Make a Reservation</button></a>
+  </div>
+</div>
 
-<div>Map</div>
+
+
+
+<div class="wrapper row">
+  <div class='map small-12 large-6 column'>
+    <img src="images/e12thmap.png"></img>
+  </div>
+
+  <div class='address small-12 large-6 column'>
+    <h3>Address</h3>
+    <p>2930 E. 12th Street <br> 
+      Austin, TX 78702
+    </p>
+  </div>  
+</div>  
 
 
 
