Playing with Dates

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       </section>
     </nav>
-
+<!-- Slider -->
 <div class="slides">
   <div><img src="images/one.jpg" alt=""></div>
   <div><img src="images/two.jpg" alt=""></div>
@@ -56,21 +56,20 @@
   <div><img src="images/thirteen.jpg" alt=""></div>
   <div><img src="images/forteen.jpg" alt=""></div>
 </div>
+
+<!-- Availablility -->
 <div class='wrapper row'>
   <div class='availability small-12 medium-6 column'>
-      <button id="checkAvail">Check Availability</button>
-      <div id='calendar' class='hidden'>
-    <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" class='calendar'></iframe>
+<!--       <button id="checkAvail">Check Availability</button> -->
+    <div id='calendar' class='hidden'>
+      <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" class='calendar'></iframe>
     </div>
   </div>
   <div class='reservation small-12 medium-6 column'>
     <a href='reservation.html'><button>Make a Reservation</button></a>
   </div>
 </div>
-
-
-
-
+<!-- Map -->
 <div class="wrapper row">
   <div class='map small-12 large-6 column'>
     <img src="images/e12thmap.png"></img>
@@ -86,12 +85,12 @@
 
 
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/foundation/js/foundation.min.js"></script>
+  <script src="js/app.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="js/slick.min.js"></script>
   <script type="text/javascript">
         $(document).ready(function(){
           $('.slides').slick({
