--- a/reservation.html
+++ b/reservation.html
@@ -18,8 +18,11 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <!-- Add your site or application content here -->
+        <!-- Calendar -->
+		    <div id='calendar' class='hidden'>
+		      <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" class='calendar'></iframe>
+		    </div>
+        <!-- Reservation Form -->
 			<div class='reservationForm'>
 			  <form>
 			    First Name: <input type="text" name="firstName"><br>
@@ -44,10 +47,17 @@
 			      </select>  
 			    <br>
 			    Tell us about yourself... <input type='text' name='otherInfo'>
-			<button>Submit</button>
+				<input type="button" name="button" value="Click" onClick="testResults(this.form)">
 			  </form> 
 			</div>
+		<script type="text/javascript">
+			function testResults (form) {
+			var TestVar = Math.abs(form.checkIn.value - form.checkOut.value);
+			alert ("You typed: " + TestVar);
+			}
+		</script>	
 
+		<script src="js/app.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 
