Dates start day of week and stay length accurate

--- a/reservation.html
+++ b/reservation.html
@@ -24,9 +24,9 @@
 			    <input type="text" name="firstName" value="First Name">
 			    <input type="text" name="lastName" value="Last Name">
 			    <br>
-			    Check in: <input type='date' name='checkIn'>
-			    Check Out: <input type='date' name='checkOut'>
-			    Number of Nights: <input type='text' name='stayLength'>
+			    Check in: <input type='date' class='date' value="2014-11-08" name='checkIn'>
+			    Check Out: <input type='date' class='date' value="2014-11-10" name='checkOut'>
+<!-- 			    Number of Nights: <input type='text' name='stayLength'>
 			    Number of Guests 
 			      <select name="numGuests">
 			        <option>1</option>
@@ -43,7 +43,7 @@
 			        <option>12</option>
 			      </select>  
 			    <br>
-			    <input type='text' name='email' value="email address">
+			    <input type='text' name='email' value="email address"> -->
 				<input type="button" name="button" value="Click" onClick="getQuote(this.form)">
 			  </form> 
 			</div>
