--- a/reservation.html
+++ b/reservation.html
@@ -44,7 +44,7 @@
 			      </select>  
 			    <br>
 			    <input type='text' name='email' value="email address"> -->
-				<input type="button" name="button" value="Click" onClick="getQuote(this.form)">
+				<input type="button" class="button" name="button" value="Click" onClick="getQuote(this.form)">
 			  </form> 
 			</div>
 
