--- a/reservation.html
+++ b/reservation.html
@@ -26,24 +26,24 @@
 			    <br>
 			    Check in: <input type='date' class='date' value="2014-11-08" name='checkIn'>
 			    Check Out: <input type='date' class='date' value="2014-11-10" name='checkOut'>
-<!-- 			    Number of Nights: <input type='text' name='stayLength'>
+			    <!-- Number of Nights: <input type='text' name='stayLength'> -->
 			    Number of Guests 
-			      <select name="numGuests">
-			        <option>1</option>
-			        <option>2</option>
-			        <option>3</option>
-			        <option>4</option>
-			        <option>5</option>
-			        <option>6</option>
-			        <option>7</option>
-			        <option>8</option>
-			        <option>9</option>
-			        <option>10</option>
-			        <option>11</option>
-			        <option>12</option>
+			      <select type="select" name="numGuests">Number of Guests
+			        <option value="0">1</option>
+			        <option value="0">2</option>
+			        <option value="0">3</option>
+			        <option value="0">4</option>
+			        <option value="1">5</option>
+			        <option value="2">6</option>
+			        <option value="3">7</option>
+			        <option value="4">8</option>
+			        <option value="5">9</option>
+			        <option value="6">10</option>
+			        <option value="7">11</option>
+			        <option value="8">12</option>
 			      </select>  
 			    <br>
-			    <input type='text' name='email' value="email address"> -->
+			    <input type='text' name='email' value="email address">
 				<input type="button" class="button" name="button" value="Click" onClick="getQuote(this.form)">
 			  </form> 
 			</div>
