--- a/reservation.html
+++ b/reservation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
+    <title>Reservations</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
     <link rel="stylesheet" type="text/css" href="scss/slides.css"/>  
@@ -14,21 +14,23 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+		<div class="wrapper row">
         <!-- Calendar -->
-<!-- 		    <div id='calendar' class='hidden'>
-		      <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" class='calendar'></iframe>
-		    </div> -->
+		    <div id='calendar' class='small-12 column'>
+		      <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="100%" height="500" frameborder="0" scrolling="no" class='calendar'></iframe>
+		    </div>
         <!-- Reservation Form -->
-			<div class='reservationForm'>
+			<div class='reservationForm small-12 column'>
 			  <form>
 			    <input type="text" name="firstName" value="First Name">
 			    <input type="text" name="lastName" value="Last Name">
+			    <input type='text' name='email' value="email address">
 			    <br>
 			    Check in: <input type='date' class='date' value="2014-11-08" name='checkIn'>
 			    Check Out: <input type='date' class='date' value="2014-11-10" name='checkOut'>
 			    <!-- Number of Nights: <input type='text' name='stayLength'> -->
-			    Number of Guests 
-			      <select type="select" name="numGuests">Number of Guests
+			    Number of Guests <br>
+			      <select type="select" name="numGuests">
 			        <option value="0">1</option>
 			        <option value="0">2</option>
 			        <option value="0">3</option>
@@ -43,11 +45,10 @@
 			        <option value="8">12</option>
 			      </select>  
 			    <br>
-			    <input type='text' name='email' value="email address">
 				<input type="button" class="button" name="button" value="Click" onClick="getQuote(this.form)">
 			  </form> 
 			</div>
-
+		</div>
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/foundation/js/foundation.min.js"></script>
