--- a/reservation.html
+++ b/reservation.html
@@ -4,9 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reservations</title>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
-    <link rel="stylesheet" type="text/css" href="scss/slides.css"/>  
+    <link rel='stylesheet' href='fullcalendar/fullcalendar.css' />
+	<script src='js/moment.min.js'></script>
+	<script src='fullcalendar/fullcalendar.js'></script>
+	<script src='fullcalendar/gcal.js'></script>
+	<script src='fullcalendar/fullcalendar.min.js'></script>
+	<script type="text/javascript">
+$(document).ready(function() {
+
+
+
+    $('#calendar').fullCalendar({
+
+    })
+
+});
+
+	</script>
   </head>
     <body>
 
@@ -15,10 +32,11 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 		<div class="wrapper row">
+			<div id='calendar'></div>
         <!-- Calendar -->
-		    <div id='calendar' class='small-12 column'>
+<!-- 		    <div id='calendar' class='small-12 column'>
 		      <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="100%" height="500" frameborder="0" scrolling="no" class='calendar'></iframe>
-		    </div>
+		    </div> -->
         <!-- Reservation Form -->
 			<div class='reservationForm small-12 column'>
 			  <form>
@@ -50,10 +68,11 @@
 			</div>
 		</div>
 
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/foundation/js/foundation.min.js"></script>
-  <script src="js/app.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+  	<script src="bower_components/foundation/js/foundation.min.js"></script>
+  	<script src="js/app.js"></script>
+  	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
     </body>
 </html>
