--- a/reservation.html
+++ b/reservation.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <title>Foundation</title>
+    <title>Reservations</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
 	<link rel='stylesheet' href='fullcalendar/fullcalendar.css' />
-	<script src='fullcalendar/lib/jquery.min.js'></script>
 	<script src='fullcalendar/lib/jquery-ui.custom.min.js'></script>	
 	<script src='fullcalendar/lib/moment.min.js'></script>
 	<script src='fullcalendar/fullcalendar.js'></script>
@@ -81,11 +80,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-		<div class="wrapper row">
+	
 			<div id='calendar'></div>
-        <!-- Calendar -->
-<!-- 		    <div id='calendar' class='small-12 column'>
-		      <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="100%" height="500" frameborder="0" scrolling="no" class='calendar'></iframe>
 
 
         <!-- Reservation Form -->
