Breaking the Slider - trying to center

--- a/index.html
+++ b/index.html
@@ -39,36 +39,32 @@
 
       </section>
     </nav>
+<div class='wrapper row'>   
 <!-- Slider -->
-<div class="slides">
-  <div><img src="images/one.jpg" alt=""></div>
-  <div><img src="images/two.jpg" alt=""></div>
-  <div><img src="images/three.jpg" alt=""></div>
-  <div><img src="images/four.jpg" alt=""></div>
-  <div><img src="images/five.jpg" alt=""></div>
-  <div><img src="images/six.jpg" alt=""></div>
-  <div><img src="images/seven.jpg" alt=""></div>
-  <div><img src="images/eight.jpg" alt=""></div>
-  <div><img src="images/nine.jpg" alt=""></div>
-  <div><img src="images/ten.jpg" alt=""></div>
-  <div><img src="images/eleven.jpg" alt=""></div>
-  <div><img src="images/twelve.jpg" alt=""></div>
-  <div><img src="images/thirteen.jpg" alt=""></div>
-  <div><img src="images/forteen.jpg" alt=""></div>
-</div>
-
+  <div class="slides">
+    <div><img src="images/one.jpg" alt=""></div>
+    <div><img src="images/two.jpg" alt=""></div>
+    <div><img src="images/three.jpg" alt=""></div>
+    <div><img src="images/four.jpg" alt=""></div>
+    <div><img src="images/five.jpg" alt=""></div>
+    <div><img src="images/six.jpg" alt=""></div>
+    <div><img src="images/seven.jpg" alt=""></div>
+    <div><img src="images/eight.jpg" alt=""></div>
+    <div><img src="images/nine.jpg" alt=""></div>
+    <div><img src="images/ten.jpg" alt=""></div>
+    <div><img src="images/eleven.jpg" alt=""></div>
+    <div><img src="images/twelve.jpg" alt=""></div>
+    <div><img src="images/thirteen.jpg" alt=""></div>
+    <div><img src="images/forteen.jpg" alt=""></div>
+  </div>
+  <div class='reservation small-12 medium-12 column'>
+    <a href='reservation.html'><button class="reservation">Make a Reservation</button></a>
+  </div>
+</div> 
 <!-- Availablility -->
-<div class='wrapper row'>
-  <div class='availability small-12 medium-6 column'>
-<!--       <button id="checkAvail">Check Availability</button> -->
-    <div id='calendar' class='hidden'>
-      <iframe src="https://www.google.com/calendar/embed?src=kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no" class='calendar'></iframe>
-    </div>
-  </div>
-  <div class='reservation small-12 medium-6 column'>
-    <a href='reservation.html'><button>Make a Reservation</button></a>
-  </div>
-</div>
+
+
+
 <!-- Map -->
 <div class="wrapper row">
   <div class='map small-12 large-6 column'>
@@ -82,6 +78,16 @@
     </p>
   </div>  
 </div>  
+
+<div class="wrapper row"><h3>Ammenities</h3>
+  <div class='leftList'> 
+      <ul>
+        <li>Sleeps up to 12</li>
+        <li>Complementary Coffee and Tea</li>
+        <li>Free High Speed WiFi</li>
+      </ul>
+  </div>
+</div>
 
 
 
