--- a/reservation.html
+++ b/reservation.html
@@ -83,12 +83,14 @@
 	
 			<div id='calendar'></div>
 
-
+		<div class='spacer'></div>
         <!-- Reservation Form -->
+        <div class="reservationWrap">
 			<div class='reservationForm'>
 			  <form>
 			    <input type="text" name="firstName" value="First Name">
 			    <input type="text" name="lastName" value="Last Name">
+			    <input type='text' name='email' value="email address">
 			    <br>
 			    Check in: <input type='date' class='date' value="2014-11-08" name='checkIn'>
 			    Check Out: <input type='date' class='date' value="2014-11-10" name='checkOut'>
@@ -109,12 +111,10 @@
 			        <option value="8">12</option>
 			      </select>  
 			    <br>
-			    <input type='text' name='email' value="email address">
 				<input type="button" class="button" name="button" value="Click" onClick="getQuote(this.form)">
 			  </form> 
 			</div>
-
-
+		</div>
   	<script src="bower_components/jquery/dist/jquery.min.js"></script>
   	<script src="bower_components/foundation/js/foundation.min.js"></script>
   	<script src="js/app.js"></script>
