html and CSS changes on Index and Reservation

--- a/reservation.html
+++ b/reservation.html
@@ -111,7 +111,7 @@
 			        <option value="8">12</option>
 			      </select>  
 			    <br>
-				<input type="button" class="button" name="button" value="Click" onClick="getQuote(this.form)">
+				<input type="button" class="button quote" name="button" value="Get a Quote" onClick="getQuote(this.form)">
 			  </form> 
 			</div>
 		</div>
