--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation</title>
+    <title>Casa Moderna - Vacation Rental</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
     <link rel="stylesheet" type="text/css" href="scss/slides.css"/>  
@@ -72,23 +72,33 @@
   </div>
 
   <div class='address small-12 large-6 column'>
-    <h3>Address</h3>
-    <p>2930 E. 12th Street <br> 
+    <!-- <h3>Address</h3> -->
+    <p>2930 E. 12th Street 
       Austin, TX 78702
     </p>
   </div>  
 </div>  
 
 <div class="wrapper row"><h3>Ammenities</h3>
-  <div class='leftList'> 
+  <div class='leftList small-12 medium-6 column'> 
       <ul>
-        <li>Sleeps up to 12</li>
-        <li>Complementary Coffee and Tea</li>
-        <li>Free High Speed WiFi</li>
+        <li><img src="images/bed.png" class="icon"></img>Sleeps up to 12</li>
+        <li><img src="images/coffee.png" class="icon"></img>Complementary Coffee and Tea</li>
+        <li><img src="images/wifi.png" class="icon"></img>Free High Speed WiFi</li>
       </ul>
   </div>
+  <div class='rightList small-12 medium-6 column'> 
+    <ul>
+      <li><img src="images/tv.png" class="icon"></img>AppleTV - Watch Movies on Netflix and HuluPlus</li>
+      <li><img src="images/kitchen.png" class="icon"></img>Fully Stocked Kitchen</li>
+
+    </ul>
+</div>
 </div>
 
+  <div class='reservation small-12 medium-12 column'>
+    <a href='reservation.html'><button class="reservation">Make a Reservation</button></a>
+  </div>
 
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
