added date picker, fixed slider

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 <div class='wrapper row'>   
 <!-- Slider -->
-  <div class="slides">
+  <div class="slides column large-6 large-centered">
     <div><img src="images/one.jpg" alt=""></div>
     <div><img src="images/two.jpg" alt=""></div>
     <div><img src="images/three.jpg" alt=""></div>
@@ -112,7 +112,8 @@
           $('.slides').slick({
             autoplay: true,
             autoplaySpeed: 2000,
-            fade: true
+            fade: true,
+            arrows: false
           });
         });
   </script>
