styling buttons and calendar

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
             <ul class="right">
-                  <li class="active"><a href="#">Reservations</a></li>
-                  <li class="active"><a href="#">Travel Guide</a></li>
-                  <li class="active"><a href="#">Rates</a></li>
-                  <li class="active"><a href="#">Check In/Out</a></li>
+                  <li class="active"><a href="reservation.html" class="navButton">Reservations</a></li>
+                  <li class="active"><a href="#" class="navButton">Travel Guide</a></li>
 
 <!--                   <li class="has-dropdown">
                     <a href="#">Right Button Dropdown</a>
