--- a/reservation.html
+++ b/reservation.html
@@ -43,25 +43,26 @@
         <![endif]-->
             </section>
     	</nav>
-	
-			<div id='calendar' class='small-12 column medium-6'></div>
-
+		<h3>Availability</h3>	
+		
+		<div id='calendar' class='small-12 column large-6'></div>
+		
 
         <!-- Reservation Form -->
         <div class='reservationForm row'>
-        	<div class="reservationWrap small-12 medium-6 column">
+        	<div class="reservationWrap small-12 large-6 column">
 				<form>
 				  	<div class='personalInfo column small-12'>
-					    <input type="text" name="firstName" value="First Name">
-					    <input type="text" name="lastName" value="Last Name">
-					    <input type='text' name='email' value="email address">
+					    <input type="text" class='blur' name="firstName" value="First Name">
+					    <input type="text" class='blur' name="lastName" value="Last Name">
+					    <input type='text' class='blur' name='email' value="email address">
 				    
 					</div>
 			    	<div class="dates column medium-4 small-6">
-					    Arrive <input type='text' class='date' value="mm/dd/yyyy"  id='datePicker1' name='checkIn'>
+					    Arrive <input type='text' class='date blur' value="mm/dd/yyyy"  id='datePicker1' name='checkIn'>
 			    	</div>
 			    	<div class="dates column medium-4 small-6">
-					    Depart<input type='text' class='date' value="mm/dd/yyyy" id='datePicker2' name='checkOut'>
+					    Depart<input type='text' class='date blur' value="mm/dd/yyyy" id='datePicker2' name='checkOut'>
 			    	</div>
 				    <!-- Number of Nights: <input type='text' name='stayLength'> -->
 				    <div class="dates column medium-4 small-12">
@@ -81,7 +82,7 @@
 					        <option value="8">12</option>
 					      </select>  
 				     </div> 
-					<input type="button" class="button quote" name="button" value="Get a Quote" onClick="getQuote(this.form)">
+					<input type="button" class="button quote" name="submit" value="Get a Quote" onClick="getQuote(this.form)">
 			  	</form> 
 			</div>
 		</div>
@@ -93,6 +94,7 @@
 	<script src='fullcalendar/lib/jquery-ui.custom.min.js'></script>	
 	<script src='fullcalendar/lib/moment.min.js'></script>
 	<script src='fullcalendar/fullcalendar.js'></script>
+	<script type='text/javascript' src='fullcalendar/gcal.js'></script>
 	<script src='js/datepicker.js'></script>
 
 
@@ -110,7 +112,8 @@
 			},
 			defaultView: 'month',
 			editable: false,
-			height: 'auto'
+			height: 'auto',
+			events: 'https://www.google.com/calendar/feeds/kgooehkq55u8f63f9mdn24r48g%40group.calendar.google.com/public/basic'
 		});
 		
 	});
