--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Casa Moderna - Vacation Rental</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
-    <script src="bower_components/modernizr/modernizr.js"></script>
-    <link rel="stylesheet" type="text/css" href="scss/slides.css"/>  
+    <script src="andrewrosario.github.io/bower_components/modernizr/modernizr.js"></script>
+    <link rel="stylesheet" type="text/css" href="andrewrosario.github.io/scss/slides.css"/>  
   </head>
   <body>
     <nav class="top-bar" data-topbar role="navigation">
