--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
       <a href='reservation.html'><button class="reservation button">Make a Reservation</button></a>
   </div>
 
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/foundation/js/foundation.min.js"></script>
-  <script src="js/app.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="js/slick.min.js"></script>
+  <script src="andrewrosario.github.io/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="andrewrosario.github.io/bower_components/foundation/js/foundation.min.js"></script>
+  <script src="andrewrosario.github.io/js/app.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="andrewrosario.github.io/js/slick.min.js"></script>
   <script type="text/javascript">
         $(document).ready(function(){
           $('.slides').slick({
