--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Casa Moderna - Vacation Rental</title>
     <link rel="stylesheet" href="stylesheets/app.css" />
-    <script src="andrewrosario.github.io/bower_components/modernizr/modernizr.js"></script>
-    <link rel="stylesheet" type="text/css" href="andrewrosario.github.io/scss/slides.css"/>  
+    <script src="gh_pages/bower_components/modernizr/modernizr.js"></script>
+    <link rel="stylesheet" type="text/css" href="gh_pages/scss/slides.css"/>  
   </head>
   <body>
     <nav class="top-bar" data-topbar role="navigation">
@@ -39,9 +39,9 @@
 <div class='wrapper row'>   
 <!-- Slider -->
   <div class="slides column large-10 large-centered">
-    <div><img src="images/one.jpg" alt=""></div>
-    <div><img src="images/two.jpg" alt=""></div>
-    <div><img src="images/three.jpg" alt=""></div>
+    <div><img src="gh_pages/images/one.jpg" alt=""></div>
+    <div><img src="gh_pages/images/two.jpg" alt=""></div>
+    <div><img src="gh_pages/images/three.jpg" alt=""></div>
     <div><img src="images/four.jpg" alt=""></div>
     <div><img src="images/five.jpg" alt=""></div>
     <div><img src="images/six.jpg" alt=""></div>
