--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <div class='wrapper row'>   
 <!-- Slider -->
   <div class="slides column large-10 large-centered">
-    <div><img src="gh_pages/images/one.jpg" alt=""></div>
-    <div><img src="gh_pages/images/two.jpg" alt=""></div>
-    <div><img src="gh_pages/images/three.jpg" alt=""></div>
+    <div><img src="images/one.jpg" alt=""></div>
+    <div><img src="images/two.jpg" alt=""></div>
+    <div><img src="images/three.jpg" alt=""></div>
     <div><img src="images/four.jpg" alt=""></div>
     <div><img src="images/five.jpg" alt=""></div>
     <div><img src="images/six.jpg" alt=""></div>
